Add HeaderFile & C1 Generate

--- a/Apriori/Apriori.vcxproj
+++ b/Apriori/Apriori.vcxproj
@@ -87,6 +87,9 @@
   <ItemGroup>
     <Text Include="input.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Apriori.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
