--- a/Apriori/Apriori.vcxproj.filters
+++ b/Apriori/Apriori.vcxproj.filters
@@ -34,4 +34,9 @@
   <ItemGroup>
     <Text Include="input.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Apriori.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
