Ck와 Lk 구하기 구현. pruning은 생략. hash tree 만들지 않았음.

--- a/Apriori/Apriori.vcxproj
+++ b/Apriori/Apriori.vcxproj
@@ -82,7 +82,9 @@
     <ClCompile Include="Fin.cpp" />
     <ClCompile Include="GenerateCk.cpp" />
     <ClCompile Include="GenerateLk.cpp" />
-    <ClCompile Include="ScanDB.cpp" />
+    <ClCompile Include="ScanDB.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt" />
