--- a/Apriori/Apriori.vcxproj.filters
+++ b/Apriori/Apriori.vcxproj.filters
@@ -36,7 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Apriori.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
