CK LK 생성 완료. pruning 실패. Maximal itemset 구하기 시작.

--- a/Apriori/Apriori.vcxproj
+++ b/Apriori/Apriori.vcxproj
@@ -79,6 +79,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Apriori.cpp" />
+    <ClCompile Include="CoutMaximal.cpp" />
     <ClCompile Include="Fin.cpp" />
     <ClCompile Include="GenerateCk.cpp" />
     <ClCompile Include="GenerateLk.cpp" />
