헤더에 전역변수로 (unordered_map으로) sup값 저장 추가,

--- a/Apriori/Apriori.vcxproj.filters
+++ b/Apriori/Apriori.vcxproj.filters
@@ -30,7 +30,7 @@
     <ClCompile Include="Fin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CoutMaximal.cpp">
+    <ClCompile Include="Output.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
