--- a/Apriori/Apriori.vcxproj
+++ b/Apriori/Apriori.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{C38D1A19-F475-4DDE-902A-FCF3676D4CBC}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Apriori</RootNamespace>
+    <ProjectName>apriori</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
